--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         <div class="search-container">
             <input type="text" id="searchInput" placeholder="Search for a meal...">
-            <button onclick="searchMeal()">Search</button>
+            <button onclick="searchMeal()" id="searchBtn">Search</button>
         </div>
         <div class="container" id="mealResults"></div>
         <button id="showAllBtn" style="display: none;" onclick="showAllMeals()">SHOW ALL</button>
